[package]
name = "api"
version = "0.1.0"
authors = ["Gustavo Konrad <g.konrad@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blockchain = { path = "../blockchain" }
actix-web = "2.0.0"
actix-rt = "1.1.1"
pretty_env_logger = "0.4.0"
actix = "0.9.0"
tracing = "0.1.18"
dotenv = "0.15.0"
redis = "0.17.0"
serde = "1.0.115"
