[package]
name = "api"
version = "0.1.0"
authors = ["Gustavo Konrad <g.konrad@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10.0-alpha.3"
actix-utils = "1.0.3"

actix-web = "2.0.0"
actix-rt = "1.1.1"

blockchain = { path = "../blockchain" }
pretty_env_logger = "0.4.0"
dotenv = "0.15.0"
redis = "0.17.0"
serde = "1.0.115"
redis-async = "0.6.1"
tokio = "0.2.6"
tokio-util = "0.3.0"
futures-util = { version = "0.3.5", default-features = false }
backoff = "0.2.1"
derive_more = "0.99.9"
log = "0.4.11"
