[package]
name = "api"
version = "0.1.0"
authors = ["Gustavo Konrad <g.konrad@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10.0-alpha.3"
actix-web = "3.0.0"

blockchain = { path = "../blockchain" }
pretty_env_logger = "0.4.0"
dotenv = "0.15.0"
serde = "1.0.115"
log = "0.4.11"
futures = "0.3.5"
redis-async = "0.6.3"
failure = "0.1.8"
